public/css/main.css
.header-title {
  text-align: center;
  font-size: 4em;
  font-family: 'Ubuntu', monospace;
}
a {
  color: black;
}
code {
  font-family: 'Ubuntu Mono', monospace;
}
.sub-title {
  font-size: 0.25em;
}
#source {
  position: absolute;
}
.center {
  width: 500px;
  position: absolute;
  left: 50%;
  margin-left: -250px;
  margin-top: 30px;
  box-shadow: 0px 0px 20px rgba(0,0,0,.7);
}

